#198 - Support user groups - Support adminForGroupIds - Add count utility method in datamodel.base.ts - Support add groups API (`POST ->/organizations/{orgId}/groups`) - Support auth-aware get groups API (`GET ->/organizations/{orgId}/groups`) - Support auth-aware get one group API (`GET ->/organizations/{orgId}/groups/{groupId}`) - Support auth-aware add user to a group API (`POST ->/organizations/{orgId}/groups/{groupId}/users`) - Support auth-aware remove a user to a group API (`DELETE ->/organizations/{orgId}/groups/{groupId}/users/{userId}`) - Handle group-key when connecting a user
