# packages/enterprise/src/models/internal-request.ts
@@ -2,4 +2,5 @@ export type InternalAdminApprovalCreateRequest = {
   email: string
   organizationId: string
   locationIds: string[]
+  groupIds: string[]
 }
